# drive-by-logic

./: .gitignore  README.md  TODO  dubins_vehicle.py  executor.py  problem.py  utils.py
docker/: sim.Dockerfile
images/: 1_1_out
media/: narrow_passage_single_stl  output.txt  reach_avoid_multi_stl  reach_avoid_single_stl  visit_all_single_stl
notebooks/: distributed.ipynb  stl.ipynb
scripts/deploy/: base.sh  devel.sh  start.sh
scripts/setup/: workspace.sh
workspace/limo_simulation/launch/: limo.launch.py
workspace/limo_simulation/urdf/: limo_ackerman.gazebo  limo_ackerman.xacro  limo_steering_hinge.xacro  limo_xacro.xacro
workspace/optimal_control/: CMakeLists.txt  package.xml
workspace/optimal_control/config/: amcl.yaml  ekf.yaml  limo_lds_2d.lua  map.pgm  map.yaml  map_clean.pgm  map_clean.yaml  mapper_params_online_sync.yaml  navigation2.yaml  split.yaml
workspace/optimal_control/config/sample_run_3/: metadata.yaml
workspace/optimal_control/launch/: cartographer.launch.py  ekf.launch.py  localization.launch.py  navigation.launch.py
workspace/optimal_control/optimal_control/: car_planner.py  distributed_dubins_solver.py  dubins_planner.py  dubins_solver.py  environment.py  executor.py  initial_guess_generator.py  planner_factory.py  plotter.py  plotting_tools.py  problem.py  robustness.py  smooth_planner.py  stl_planner.py  utils.py  waypoint.py
workspace/optimal_control/scripts/: analysis.py  distributed_reach_avoid.py  dubins_vehicle.py  initial_guess_gen.py  multi_reach_avoid.py  narrow_passage.py  narrow_passage_single_stl.py  needforspeed.py  opensaysme.py  planner.py  reach_avoid.py  reach_avoid_multi_stl.py  reach_avoid_physical.py  reach_avoid_physical_2.py  reach_avoid_single_stl.py  run_experiment.py  test_planner.py  testbed.py  view_environments.py  visit_all.py  visit_all_single_stl.py  visit_in_sequence.py
