<?xml version="1.0"?>
<package format="3">
    <name>optimal_control</name>
    <version>1.0.0</version>
    <description>package that has optimal control tools for robots</description>

    <maintainer email="praneeth.pep@gmail.com">KVK Praneeth</maintainer>
    <license>MIT?</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>